# Internet-Monitor

./: CMakeLists.txt  README.md  execute.sh  servers.txt  systemd_service_setup.sh
include/: Connection_Exception.h  Internet_Monitor.h  Server_Info.h
src/: Connection_Exception.cpp  Internet_Monitor.cpp  Server_Info.cpp  main.cpp
